@startuml
skinparam monochrome true

'--- Role Enum ------------------------------------------------
enum Role {
  Visitor
  Registered
  Bénévole
  Initiateur
  Admin
}

'--- Entities -------------------------------------------------
class User {
  +user_id : PK
  +username : String
  +name : String (nullable)
  +email : String
  +password_hash : String
  +role : Role
  +email_verified_at : DateTime? 
  +created_at : DateTime
}

class Article {
  +article_id : PK
  +title : String
  +slug : String
  +content : Text
  +image : String? 
  +category : String
  +region : String
  +views : Integer = 0
  +shares : Integer = 0
  +status : Enum [Draft, Published, Archived]
  +author_id : FK → User
  +published_at : DateTime?
  +is_moderated : Boolean = false
  +created_at : DateTime
  +updated_at : DateTime
}

class Comment {
  +comment_id : PK
  +article_id : FK → Article
  +user_id : FK → User (nullable)
  +guest_name : String (nullable)
  +content : Text
  +is_approved : Boolean = false
  +created_at : DateTime
  +updated_at : DateTime
}

class Favorite {
  +user_id : FK → User
  +article_id : FK → Article
  +created_at : DateTime
}

class Tag {
  +tag_id : PK
  +name : String (unique)
  +created_at : DateTime
  +updated_at : DateTime
}

class ArticleTag {
  +article_id : FK → Article
  +tag_id : FK → Tag
}

'--- Relationships -------------------------------------------
User "1" --> "0..*" Article : écrit >
User "1" --> "0..*" Comment : écrit >
User "1" --> "0..*" Favorite : aime >

Article "1" --> "0..*" Comment : reçoit >
Article "1" --> "0..*" Favorite : est aimé par >
Article "1" --> "0..*" ArticleTag : possède >

Tag "1" --> "0..*" ArticleTag : catégorise >

'--- Rôles ----------------------------------------------------
note top of User
  • **Visitor** : Lecture uniquement
  • **Registered / Bénévole** : Commenter, liker
  • **Initiateur** : Publier, gérer ses articles
  • **Admin** : Modérer, approuver, tout gérer
end note

@enduml